faltam estes do serviceCollection: - serviceIteratorByType - getTheNearestService - getDescriptions - getServicesWithTag
estes últimos dois tenta fazer, mas supostamente com a regra de não se poder usar string, temos que perceber como é que comparamos. Vai fazendo e sê feliz!

Os métodos dos students devem estar todos feitos